codage des titres en créant un tableau dans le controller, et codage en twig

--- a/templates/page/about.html.twig
+++ b/templates/page/about.html.twig
@@ -1,6 +1,7 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}A propos de nous...{% endblock %}{# Title comme en HTML qui dans le head qui s'affiche dand l'onglet de mon navigateur #}
+{% block titleh %}A propos de nous...{% endblock %}{# Sous titre de mon blog #}
 
 {% block body %}
 
