--- a/templates/page/contact.html.twig
+++ b/templates/page/contact.html.twig
@@ -1,6 +1,7 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}Pour nous contacter{% endblock %}{# Title comme en HTML qui dans le head qui s'affiche dand l'onglet de mon navigateur #}
+{% block titleh %}Pour nous contacter{% endblock %}{# Sous titre de mon blog #}
 
 {% block body %}
     <!-- Main Content-->
