--- a/templates/post/home.html.twig
+++ b/templates/post/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Hello PostController!{% endblock %}
-
+{% block title %}Bienvenue sur mon blog{% endblock %}{# Title comme en HTML qui dans le head qui s'affiche dand l'onglet de mon navigateur #}
+{% block subtitleh %}Toute l'actualité du surf{% endblock %}{# Sous titre de mon blog #}
 {% block body %}
       <!-- Main Content-->
 
