--- a/templates/post/view.html.twig
+++ b/templates/post/view.html.twig
@@ -1,20 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'clean.html.twig' %}
+{% block title %}{{post.title}}{% endblock %}
 
-{% block title %}Hello PostController!{% endblock %}
+{% block titleh %}{{post.title}}{% endblock %}
+
+{% block subtitleh %}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/symfony_myblog/src/Controller/PostController.php'|file_link(0) }}">src/Controller/PostController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/symfony_myblog/templates/post/index.html.twig'|file_link(0) }}">templates/post/index.html.twig</a></code></li>
-    </ul>
-</div>
+ <article class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <p>{{post.content}}</p>
+                    </div>
+                </div>
+            </div>
+        </article>
 {% endblock %}
