création de Form, Category Type, AdminContoller, création template admin, modif reset_password

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -45,7 +45,7 @@
                 Sign in
             </button>
         </form>
-
+        <a class="" href="{{ path ('app_forgot_password_request')}}"> Forgotten Password </a>
                                 </div>
                             </div>
                         </div>
