--- a/public/clean/css/styles.css
+++ b/public/clean/css/styles.css
@@ -11245,4 +11245,7 @@ header.masthead .site-heading .h1 {
   .post-preview > a > .post-title {
     font-size: 2.25rem;
   }
+  .post-content img{
+    width: 100%;
+  }
 }
