--- a/templates/post/home.html.twig
+++ b/templates/post/home.html.twig
@@ -1,8 +1,11 @@
 {% extends 'clean.html.twig' %}
 
 {% block title %}Bienvenue sur mon blog{% endblock %}{# Title comme en HTML qui dans le head qui s'affiche dand l'onglet de mon navigateur #}
-{% block subtitleh %}Toute l'actualité du surf{% endblock %}{# Sous titre de mon blog #}
+{% block subtitleh %}Toute l'actualité de la danse{% endblock %}{# Sous titre de mon blog #}
+
 {% block body %}
+
+{#{{ dump(posts) }}#}
       <!-- Main Content-->
 
         <div class="container px-4 px-lg-5">
@@ -10,63 +13,22 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
 
                     <!-- Post preview-->
-
+                    {% for post in posts %}
                     <div class="post-preview">
-                        <a href="{{ path('post_view', {id: 1}) }}">
-                            <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on September 24, 2022
+                    <a href="{{ path('post_view', {slug: post.slug}) }}">
+                        <h2 class="post-title">{{ post.title }}</h2>
+                        <img src="{{ post.image }}" alt="" style="width: 100%">
+                        <h3 class="post-subtitle">{{ post.content | u.truncate(150, '...') | raw }}</h3>
+                    </a>
+                    <p class="post-meta">Rédigé par
+                        <a href="#">{{post.user.email}}</a>
+                        publié {{post.createdAt | ago}}
+                        classé dans {{post.category.name}}
                         </p>
                     </div>
-
-                    <!-- Divider-->
-
-                    <hr class="my-4" />
-
-                    <!-- Post preview-->
-
-                    <div class="post-preview">
-                        <a href="{{ path('post_view', {id: 2}) }}"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on September 18, 2022
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="{{ path('post_view', {id: 3}) }}">
-                            <h2 class="post-title">Science has not yet mastered prophecy</h2>
-                            <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on August 24, 2022
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
-                    <!-- Post preview-->
-                    <div class="post-preview">
-                        <a href="{{ path('post_view', {id: 4}) }}">
-                            <h2 class="post-title">Failure is not an option</h2>
-                            <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on July 8, 2022
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
+                    <hr>
+                    {% endfor %}
+                   
                     <!-- Pager-->
                     <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
                 </div>
