--- a/templates/post/view.html.twig
+++ b/templates/post/view.html.twig
@@ -4,13 +4,20 @@
 {% block titleh %}{{post.title}}{% endblock %}
 
 {% block subtitleh %}{% endblock %}
+{% block imageh %}<header class="masthead" style= "background-image: url('{{post.image}}')">{% endblock %}
 
 {% block body %}
- <article class="mb-4">
+{{dump(post)}}
+ <article class="mb-4 post-content">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>{{post.content}}</p>
+                    <div class="col-md-10 col-lg-8 col-xl-7 post-content">
+                        {{post.content | raw}}
+                        <p class="post-meta">Rédigé par
+                        <a href="#">{{post.user.email}}</a>
+                        publié {{post.createdAt | ago}}
+                        classé dans {{post.category.name}}
+                        </p>
                     </div>
                 </div>
             </div>
