--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,21 +1,40 @@
-{% extends 'base.html.twig' %}
+{% extends 'clean.html.twig' %}
 
-{% block title %}Hello CategoryController!{% endblock %}
+{% block title %}Bienvenue sur mon blog{% endblock %}{# Title comme en HTML qui dans le head qui s'affiche dand l'onglet de mon navigateur #}
+{% block subtitleh %}Toute l'actualité de la danse{% endblock %}{# Sous titre de mon blog #}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello ! ✅</h1>
+{#{{ dump(posts) }}#}
+      <!-- Main Content-->
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/symfony_blog/src/Controller/CategoryController.php'|file_link(0) }}">src/Controller/CategoryController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/symfony_blog/templates/category/index.html.twig'|file_link(0) }}">templates/category/index.html.twig</a></code></li>
-    </ul>
-    {{ dump(category.posts) }}
-</div>
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+
+                <h2>Categorie : {{category.name}} </h2>
+                
+                    <!-- Post preview-->
+                    {% for post in category.posts %}
+                    <div class="post-preview">
+                    <a href="{{ path('post_view', {slug: post.slug}) }}">
+                        <h2 class="post-title">{{ post.title }}</h2>
+                        <img src="{{ post.image }}" alt="" style="width: 100%">
+                        <h3 class="post-subtitle">{{ post.content | u.truncate(150, '...') | raw }}</h3>
+                    </a>
+                    <p class="post-meta">Rédigé par
+                        <a href="#">{{post.user.email}}</a>
+                        publié {{post.createdAt | ago}}
+                        classé dans {{post.category.name}}
+                        </p>
+                    </div>
+                    <hr>
+                    {% endfor %}
+                   
+                    <!-- Pager-->
+                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+                </div>
+            </div>
+        </div>
+
 {% endblock %}
