gestion de Admin et Category, mise en page front end dans admin

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -558,3 +558,8 @@
                     </div>
                 </main>
 {% endblock %}
+
+{% block js_end %}
+        <script src="{{ asset('sbadmin/assets/demo/chart-area-demo.js') }}"></script>
+        <script src="{{ asset('sbadmin/assets/demo/chart-bar-demo.js') }}"></script>
+{% endblock %}
