--- a/templates/sbadmin.html.twig
+++ b/templates/sbadmin.html.twig
@@ -37,7 +37,8 @@
                         <li><a class="dropdown-item" href="#!">Settings</a></li>
                         <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                        <!--chemin dynamique pour le LOGOUT-->
+                        <li><a class="dropdown-item" href="{{ path ('app_logout')}}">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -107,7 +108,7 @@
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
+                        <div class="small">Connecté en: {{ app.user.email }}</div>
                         Start Bootstrap
                     </div>
                 </nav>
