--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -557,6 +557,29 @@
                         </div>
                     </div>
                 </main>
+
+            <!-- Modal -->
+            <div class="modal fade" id="modalDelete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Supprimer un article</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                        <a href="" class="btn btn-primary">Supprimer</a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
 {% endblock %}
 
 {% block js_end %}
