modif titre en majuscule dans home.html.twig

--- a/templates/post/home.html.twig
+++ b/templates/post/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'clean.html.twig' %}
 
 {% block title %}Bienvune sur mon blog{% endblock %}
-{% block subtitleh %}toute l'actualité du surf{% endblock %}
+{% block subtitleh %}Toute l'actualité du surf{% endblock %}
 
 {% block body %}
 
